# rust-otel-setup

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  resource.rs
src/auth/: gcp.rs  layer.rs  mod.rs  unauthenticated.rs
src/authentication/: gcp.rs  mod.rs  unauthenticated.rs
src/otel/: logger.rs  mod.rs  resource.rs  tracer.rs
src/tracer/: mod.rs  stdout.rs
src/tracer/grpc/: interceptor.rs  mod.rs
src/tracer/http/: mod.rs
src/tracer/reqwest/: mod.rs
