[package]
name = "rust-otel-setup"
version = "0.1.0"
authors = ["Pablo Esteban <pab.est.pe@gmail.com>"]
edition = "2024"
description = "Rust package for setting up tracing and logging efficiently"
readme = "README.md"
repository = "https://github.com/tinyurl-pestebani/rust-otel-setup"
license = "Apache-2.0"
keywords = ["opentelemetry", "logging", "tracing"]
homepage = "https://github.com/tinyurl-pestebani/rust-otel-setup"

[dependencies]
opentelemetry = { version = "0.30.0", features = ["metrics", "logs"] }
opentelemetry-gcloud-trace = "0.20.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version= "0.30.0", features = ["metrics", "logs", "grpc-tonic"] }
opentelemetry-stdout = "0.30.0"
tracing = "0.1.41"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tokio = { version = "1.45.1", features = ["rt"] }
tracing-subscriber = { version = "0.3.19" , features = ["env-filter"]}
tracing-loki = "0.2.6"
tracing-opentelemetry = "0.31.0"
anyhow = "1.0.99"



[lib]
name = "rust_otel_setup"
path = "src/lib.rs"
crate-type = ["lib"]

