[package]
name = "rust-otel-setup"
version = "0.1.3"
authors = ["Pablo Esteban <pab.est.pe@gmail.com>"]
edition = "2024"
description = "Rust package for setting up tracing and logging efficiently"
readme = "README.md"
repository = "https://github.com/tinyurl-pestebani/rust-otel-setup"
license = "Apache-2.0"
keywords = ["opentelemetry", "logging", "tracing"]
homepage = "https://github.com/tinyurl-pestebani/rust-otel-setup"

[dependencies]
google-cloud-auth = "1.2.0"
opentelemetry = { version = "0.31.0", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version= "0.31.0", features = ["metrics", "logs", "grpc-tonic", "tls", "tls-roots", "hyper-client", "reqwest-client"] }
opentelemetry-stdout = "0.31.0"
tracing = "0.1.41"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20" , features = ["env-filter"]}
tracing-loki = "0.2.6"
tracing-opentelemetry = "0.32.0"
anyhow = "1.0.100"
tonic = "0.14.2"
hyper-util = "0.1.18"
async-trait = "0.1.89"
reqwest = "0.12.24"



[lib]
name = "rust_otel_setup"
path = "src/lib.rs"
crate-type = ["lib"]

